Mejoras gráficas y en el formateo del texto

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
         <!-- Header -->
         <header class="header">
             <div class="header-brand">
-                <span class="header-logo">RÖS'S</span>
+                <img src="/assets/ross_ai.svg" alt="RÖS'S AI Logo" class="header-logo">
                 <span class="header-subtitle">Asistente Virtual</span>
             </div>
             <div class="header-status" id="status-indicator">
